src/tests/compile_fail/too_many_locals.gab
let a1 = "value"
let a2 = a1
let a3 = a2
let a4 = a3
let a5 = a4
let a6 = a5
let a7 = a6
let a8 = a7
let a9 = a8
let a10 = a9
let a11 = a10
let a12 = a11
let a13 = a12
let a14 = a13
let a15 = a14
let a16 = a15
let a17 = a16
let a18 = a17
let a19 = a18
let a20 = a19
let a21 = a20
let a22 = a21
let a23 = a22
let a24 = a23
let a25 = a24
let a26 = a25
let a27 = a26
let a28 = a27
let a29 = a28
let a30 = a29
let a31 = a30
let a32 = a31
let a33 = a32
let a34 = a33
let a35 = a34
let a36 = a35
let a37 = a36
let a38 = a37
let a39 = a38
let a40 = a39
let a41 = a40
let a42 = a41
let a43 = a42
let a44 = a43
let a45 = a44
let a46 = a45
let a47 = a46
let a48 = a47
let a49 = a48
let a50 = a49
let a51 = a50
let a52 = a51
let a53 = a52
let a54 = a53
let a55 = a54
let a56 = a55
let a57 = a56
let a58 = a57
let a59 = a58
let a60 = a59
let a61 = a60
let a62 = a61
let a63 = a62
let a64 = a63
let a65 = a64
let a66 = a65
let a67 = a66
let a68 = a67
let a69 = a68
let a70 = a69
let a71 = a70
let a72 = a71
let a73 = a72
let a74 = a73
let a75 = a74
let a76 = a75
let a77 = a76
let a78 = a77
let a79 = a78
let a80 = a79
let a81 = a80
let a82 = a81
let a83 = a82
let a84 = a83
let a85 = a84
let a86 = a85
let a87 = a86
let a88 = a87
let a89 = a88
let a90 = a89
let a91 = a90
let a92 = a91
let a93 = a92
let a94 = a93
let a95 = a94
let a96 = a95
let a97 = a96
let a98 = a97
let a99 = a98
let a100 = a99
let a101 = a100
let a102 = a101
let a103 = a102
let a104 = a103
let a105 = a104
let a106 = a105
let a107 = a106
let a108 = a107
let a109 = a108
let a110 = a109
let a111 = a110
let a112 = a111
let a113 = a112
let a114 = a113
let a115 = a114
let a116 = a115
let a117 = a116
let a118 = a117
let a119 = a118
let a120 = a119
let a121 = a120
let a122 = a121
let a123 = a122
let a124 = a123
let a125 = a124
let a126 = a125
let a127 = a126
let a128 = a127
let a129 = a128
let a130 = a129
let a131 = a130
let a132 = a131
let a133 = a132
let a134 = a133
let a135 = a134
let a136 = a135
let a137 = a136
let a138 = a137
let a139 = a138
let a140 = a139
let a141 = a140
let a142 = a141
let a143 = a142
let a144 = a143
let a145 = a144
let a146 = a145
let a147 = a146
let a148 = a147
let a149 = a148
let a150 = a149
let a151 = a150
let a152 = a151
let a153 = a152
let a154 = a153
let a155 = a154
let a156 = a155
let a157 = a156
let a158 = a157
let a159 = a158
let a160 = a159
let a161 = a160
let a162 = a161
let a163 = a162
let a164 = a163
let a165 = a164
let a166 = a165
let a167 = a166
let a168 = a167
let a169 = a168
let a170 = a169
let a171 = a170
let a172 = a171
let a173 = a172
let a174 = a173
let a175 = a174
let a176 = a175
let a177 = a176
let a178 = a177
let a179 = a178
let a180 = a179
let a181 = a180
let a182 = a181
let a183 = a182
let a184 = a183
let a185 = a184
let a186 = a185
let a187 = a186
let a188 = a187
let a189 = a188
let a190 = a189
let a191 = a190
let a192 = a191
let a193 = a192
let a194 = a193
let a195 = a194
let a196 = a195
let a197 = a196
let a198 = a197
let a199 = a198
let a200 = a199
let a201 = a200
let a202 = a201
let a203 = a202
let a204 = a203
let a205 = a204
let a206 = a205
let a207 = a206
let a208 = a207
let a209 = a208
let a210 = a209
let a211 = a210
let a212 = a211
let a213 = a212
let a214 = a213
let a215 = a214
let a216 = a215
let a217 = a216
let a218 = a217
let a219 = a218
let a220 = a219
let a221 = a220
let a222 = a221
let a223 = a222
let a224 = a223
let a225 = a224
let a226 = a225
let a227 = a226
let a228 = a227
let a229 = a228
let a230 = a229
let a231 = a230
let a232 = a231
let a233 = a232
let a234 = a233
let a235 = a234
let a236 = a235
let a237 = a236
let a238 = a237
let a239 = a238
let a240 = a239
let a241 = a240
let a242 = a241
let a243 = a242
let a244 = a243
let a245 = a244
let a246 = a245
let a247 = a246
let a248 = a247
let a249 = a248
let a250 = a249
let a251 = a250
let a252 = a251
let a253 = a252
let a254 = a253
let a255 = a254
